--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,98 +1,143 @@
-.hero{
+.hero {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 3%;
+    margin-left: 5%;
+}
+
+.hero img {
+    margin-right: 5%;
+}
+
+.hero-content {
     display: flex;
     align-items: center;
     flex-direction: row;
     gap: 20px
 }
 
-.hero img{
-    margin-right: 5%;
-    margin-top: 5px;
-}
-
-.hero-desc{
-    margin-left: 5%;
+.hero-desc {
     display: flex;
     align-items: left;
     flex-direction: column;
     gap: 20px
 }
 
-.hero h1{
+.hero h1 {
     text-align: left;
     width: 80%;
     font-size: 60px;
     font-weight: 600;
     background: linear-gradient(267deg, #c84630 0.5%, #39A0ED 100%);
-    background-clip:text;
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.hero h1 span{
-    -webkit-text-fill-color: #f1faee;
+.hero h1 span {
+    -webkit-text-fill-color: white;
 }
 
-.hero h2{
-    text-align: centeleftr;
+.hero h2 {
+    text-align: left;
     width: 80%;
     font-size: 20px;
     font-weight: 200;
 }
 
-.hero p{
-    width:85%;
+.hero p {
+    width: 85%;
     text-align: left;
     font-size: 24px;
     line-height: 30px;
 }
 
-.hero p a:link{
+.hero p a:link {
     color: #9AD8FF;
     text-decoration: none;
 }
 
-.hero p a:visited{
+.hero p a:visited {
     color: #9AD8FF;
     text-decoration: none;
 }
 
-.hero p a:hover{
+.hero p a:hover {
     color: #39A0ED;
     text-decoration: underline;
 }
 
-.hero-action{
+.hero-action {
     display: flex;
     align-items: center;
-    gap:25px;
+    gap: 25px;
     font-size: 22px;
     font-weight: 500;
     margin-bottom: 25px;
 }
 
-.hero-connect{
+.hero-connect {
     padding: 15px 35px;
     border-radius: 50px;
-    border:2px solid #9AD8FF;
+    border: 2px solid #9AD8FF;
     cursor: pointer;
 }
 
-.hero-resume{
+.hero-resume {
     padding: 15px 35px;
     border-radius: 50px;
-    border:2px solid #9AD8FF;
+    border: 2px solid #9AD8FF;
     cursor: pointer;
 }
 
-.hero-connect:hover{
-    border:2px solid #39A0ED;
-    color:#9AD8FF;
+.hero-connect:hover {
+    border: 2px solid #39A0ED;
+    color: #9AD8FF;
     transform: scale(1.05);
 }
 
-.hero-resume:hover{
-    color:#9AD8FF;
-    border:2px solid #39A0ED;
+.hero-resume:hover {
+    color: #9AD8FF;
+    border: 2px solid #39A0ED;
     transform: scale(1.05);
+}
+
+.scrollButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* font-size: 40px; */
+    font-weight: 600;
+    transform:scale(2)
+}
+
+.scrollIcon {
+    display: inline-block;
+    position: relative;
+    animation: 2.5s scrollIcon infinite;
+    color:#9AD8FF;
+}
+
+@keyframes scrollIcon {
+    0% {
+        opacity: 0;
+        top: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        top: 15px;
+    }
+}
+
+.anchor-link {
+    text-decoration: none;
+    color: white;
 }
