--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,13 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body{
   height: 100vh;
   background: #001021;
-  color: #F1FAEE;
+  color: white;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
