--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -80,9 +80,8 @@
     width: 100%;
     /* align button to the left */
     padding: 0.75rem 2rem;
-    background-color: #101010;
-    border: solid;
-    border-color: #39A0ED;
+    background-color: #001021;
+    border: 1px solid #39A0ED;
     border-radius: 0.5rem;
     color: white;
     font-size: 1rem;
