--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -6,23 +6,27 @@
   flex-direction: row;
   align-items: center;
   padding: 0rem 1rem;
-  margin: 0% 1%;
+  margin: 0% 2%;
   background: #0b0f23;
   color: #f5f5f5;
 }
 
 .contact-desc {
-  margin: 0rem auto 3rem;
-  max-width: 600px;
-  text-align: center;
+  width: 50%;
 }
 
-.contact-desc h1 {
-  font-size: 3.5rem;
+.contact-heading {
+  margin: 0rem auto 3rem;
+  max-width: 600px;
+  width: fit-content;
+  align-items: center;
+}
+
+.contact-heading h1 {
   text-align: center;
-  margin-bottom: 2rem;
+  font-size: 3.5rem;
   font-weight: 600;
-  background: linear-gradient(90deg, #39A0ED 0.1%, #c84630 150%);
+  background: linear-gradient(90deg, #39A0ED 0.5%, #ff5a3d 130%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -105,6 +109,8 @@
 
 /* 2) Heading */
 .contact-links h1 {
+  align-self: center;
+  width: fit-content;
   font-size: 3rem;
   margin-bottom: 1.5rem;
   font-weight: 600;
@@ -141,7 +147,11 @@
     /* more breathing room top/bottom */
   }
 
-  .contact-desc h1 {
+  .contact-desc {
+    width: auto
+  }
+
+  .contact-heading h1 {
     font-size: 2.5rem;
     /* was 3.5rem */
   }
@@ -202,12 +212,16 @@
 /* ──────────────────────────────────────────────────────────────────────── */
 @media (max-width: 768px) {
   .contact {
-    padding: 1rem 1rem;
+    padding: 1rem 1.5rem;
     flex-direction: column;
     /* more breathing room top/bottom */
   }
 
-  .contact-desc h1 {
+  .contact-desc {
+    width: auto
+  }
+
+  .contact-heading h1 {
     font-size: 2.5rem;
     /* was 3.5rem */
   }
@@ -268,7 +282,11 @@
 /* ──────────────────────────────────────────────────────────────────────── */
 @media (max-width: 480px) {
   .contact {
-    padding: 1.5rem 0.5rem;
+    padding: 1rem 1.5rem;
+  }
+
+  .contact-desc{
+    width: auto
   }
 
   .contact-desc h1 {
