--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -77,11 +77,8 @@
     border-radius: 50px;
     border: 2px solid #9AD8FF;
     cursor: pointer;
-}
-
-.hero-resume a {
-    color: white;
     text-decoration: none;
+    color:white
 }
 
 .hero-connect:hover,
