--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -12,7 +12,8 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    gap: 20px
+    gap: 20px;
+    margin-top:5%
 }
 
 .hero-desc {
