--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -33,6 +33,24 @@
     align-items: center;
     text-align: center;
     width: auto;
+    text-decoration: none;
+}
+
+.project-card {
+    opacity: 0;
+    transform: translateY(20px);
+    transition:
+        opacity 0.6s ease-out var(--delay, 0ms),
+        transform 0.6s ease-out var(--delay, 0ms);
+}
+
+/* .project-card.hidden {
+    opacity: 0;
+    transform: translateY(20px);
+} */
+.project-card.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .project-card .project-title {
@@ -42,7 +60,6 @@
     color: #ffffff;
     line-height: 1.2;
 }
-
 
 .project-card .project-desc {
     margin-top: 0.5rem;
@@ -109,6 +126,7 @@
     .projects p {
         font-size: 0. 9​5rem;
     }
+
     .projects-content {
         gap: 1rem;
     }
