--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -12,7 +12,7 @@
 
 .navbar h1 {
   max-height: 60px;
-  margin: 1rem 1rem;
+  margin: 1rem 1.5rem;
   text-decoration: none;
   color: #39A0ED;
   font-size: 1.5rem;
@@ -47,6 +47,7 @@
   justify-content: space-between;
   width: 28px;
   height: 21px;
+  margin-right: 1.5rem;
   background: transparent;
   border: none;
   cursor: pointer;
